--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "searchlight"]
 	path = searchlight
 	url = https://github.com/liverbirdkte/searchlight.git
+[submodule "zaqar"]
+	path = zaqar
+	url = https://github.com/openstack/zaqar.git
